Google Home Page Main end

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Document</title>
+	<title>Google</title>
 </head>
 <body>
 	<div class="container">
@@ -20,7 +20,7 @@
 	
 		<div class="center">
 			<div class="google-logo">
-				<img src="img/google_logo.png" alt="Google">
+				<img class="google-logo__img" src="img/google_logo.png" alt="Google">
 			</div>
 			<form class="form-google" action="">
 				<div class="search">		
